# yaml-edit-py

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: python.yml  release.yml
python/yaml_edit/: __init__.py  _yaml_edit.pyi
src/: lib.rs
tests/: test_yaml_edit.py
