[build-system]
requires = ["setuptools>=61", "setuptools-rust>=1.7"]
build-backend = "setuptools.build_meta"

[project]
name = "yaml-edit"
version = "0.2.1"
description = "Lossless YAML parser and editor that preserves formatting, comments, and whitespace"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Jelmer Vernooĳ", email = "jelmer@debian.org" }]
keywords = ["yaml", "parser", "lossless", "edit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing :: Markup",
]

[project.urls]
Homepage = "https://github.com/jelmer/yaml-edit"
Repository = "https://github.com/jelmer/yaml-edit"

[tool.setuptools.packages.find]
where = ["python"]

[[tool.setuptools-rust.ext-modules]]
target = "yaml_edit._yaml_edit"
path = "Cargo.toml"
binding = "PyO3"

[tool.setuptools.package-data]
yaml_edit = ["py.typed", "*.pyi"]
