[build-system]
requires = ["setuptools>=77", "setuptools-rust>=1.7"]
build-backend = "setuptools.build_meta"

[project]
name = "yaml-edit"
version = "0.1.0"
description = "Lossless YAML parser and editor that preserves formatting, comments, and whitespace"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Jelmer Vernooĳ", email = "jelmer@debian.org" }]
keywords = ["yaml", "parser", "lossless", "edit"]
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Developers",
	"Programming Language :: Python :: 3",
	"Programming Language :: Rust",
	"Topic :: Software Development :: Libraries",
	"Topic :: Text Processing :: Markup",
]

[project.urls]
Homepage = "https://github.com/jelmer/yaml-edit-py"
Repository = "https://github.com/jelmer/yaml-edit-py"

[tool.setuptools.packages.find]
where = ["python"]

[[tool.setuptools-rust.ext-modules]]
target = "yaml_edit._yaml_edit"
path = "Cargo.toml"
binding = "PyO3"

[tool.setuptools.package-data]
yaml_edit = ["py.typed", "*.pyi"]

[tool.cibuildwheel]
# PyPy ships no Rust toolchain by default and the extension targets CPython.
# musllinux is skipped: no prebuilt Rust for the musl i686 target.
skip = "pp* *-musllinux*"
build-frontend = "build"
test-command = "python -m unittest discover -s {project}/tests"

[tool.cibuildwheel.linux]
# manylinux containers have no Rust; install rustup before building.
before-all = "curl -sSf https://sh.rustup.rs | sh -s -- -y --profile minimal"
environment = { PATH = "$HOME/.cargo/bin:$PATH" }

[tool.cibuildwheel.macos]
# Rust requires macOS 10.12+; cibuildwheel otherwise defaults lower.
environment = { MACOSX_DEPLOYMENT_TARGET = "10.12" }
